Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.5.css" rel="stylesheet" type="text/css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="main" rel="stylesheet" type="text/css">
+</head>
 
-  <body>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
-  </body>
-  
+<body>
+  <nav class="navbar navbar-full navbar-dark bg-primary navbar-fixed-top cover text-center p-3">
+    <div class="container">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <ul class="nav navbar-nav float-sm-right">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"><i class=" fa fa-home fa-fw"></i>Welcome<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Motorhome Info</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Trailer Info</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Travel Taiwan</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Operational Base</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Cantact Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Sign In</a></li>
+      </ul>
+    </div>
+  </nav>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+
+
+</body>
+
 </html>
