Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-full navbar-dark bg-primary navbar-fixed-top cover text-center p-3">
     <div class="container">
       <a class="navbar-brand" href="#">Navbar</a>
-      <ul class="nav navbar-nav float-sm-right">
+      <ul class="nav navbar-nav float-sm-right nav-inline">
         <li class="nav-item active">
           <a class="nav-link" href="#"><i class=" fa fa-home fa-fw"></i>Welcome<span class="sr-only">(current)</span></a>
         </li>
